WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
40251
[Qt] FrameLoaderClientQt.h has coding-style errors
https://bugs.webkit.org/show_bug.cgi?id=40251
Summary
[Qt] FrameLoaderClientQt.h has coding-style errors
Anders Bakken
Reported
2010-06-07 11:53:58 PDT
[Qt] FrameLoaderClientQt.h has coding-style errors
Attachments
Patch
(19.84 KB, patch)
2010-06-07 11:54 PDT
,
Anders Bakken
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Bakken
Comment 1
2010-06-07 11:54:20 PDT
Created
attachment 58064
[details]
Patch
WebKit Commit Bot
Comment 2
2010-06-09 17:30:54 PDT
Comment on
attachment 58064
[details]
Patch Clearing flags on attachment: 58064 Committed
r60925
: <
http://trac.webkit.org/changeset/60925
>
WebKit Commit Bot
Comment 3
2010-06-09 17:30:59 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug