2010-06-09  Anders Bakken  <agbakken@gmail.com>

Reviewed by David Levin.

        [Qt] FrameLoaderClientQt.h has coding-style errors
        https://bugs.webkit.org/show_bug.cgi?id=40251

        * WebCoreSupport/FrameLoaderClientQt.h:
        (WebCore::FrameLoaderClientQt::dispatchWillSendSubmitEvent):

Canonical link: https://commits.webkit.org/51940@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@60925 268f45cc-cd09-0410-ab3c-d52691b4dbfc